# hyprland-set-window-rule

./: Cargo.toml  README.md  build.rs
patches/: hyprlang+0.2.0.patch
src/: hyprland_config.rs  main.rs  system_info.rs  window_selector.rs
src/shell_command/: types.rs
src/shell_command/commands/: generate.rs
src/tui/: root.rs
src/tui/widgets/: mod.rs  window_info_row.rs  window_select.rs
src/wayland/: mod.rs  types.rs  window_selector.rs
src/wayland/buffer_surface/: has_output.rs  in_process.rs  mod.rs  pre.rs  ready_to_draw.rs
src/wayland/protocols/: mod.rs  wl_keyboard.rs  wl_output.rs  wl_pointer.rs  wl_seat.rs  wl_state.rs  wlr_layer_surface.rs  xdg_toplevel.rs
